<resources>
    <string name="app_name">Egame</string>
    <string name="select1_text">1</string>
    <string name="select2_text">2</string>
    <string name="select3_text">3</string>
    <string name="select4_text">4</string>
    <string name="select5_text">5</string>
    <string name="playerWinCount_text">勝利</string>
    <string name="cpuWinCount_text">勝利</string>
    <string name="next_text">次へ</string>
    <string name="round_text">ラウンド</string>
    <string name="position_text" />
    <string name="result_text" >Joker</string>
</resources>