<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_error"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/select1Btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select1_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/select2Btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select2_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select1Btn" />

    <Button
        android:id="@+id/select3Btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select3_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select2Btn" />

    <Button
        android:id="@+id/select4Btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select4_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select3Btn" />

    <Button
        android:id="@+id/select5Btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select5_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select4Btn" />

    <ImageView
        android:id="@+id/playerPosition1Image"
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/select1Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/civil" />

    <ImageView
        android:id="@+id/playerPosition2Image"
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/select2Btn"
        app:layout_constraintStart_toEndOf="@+id/playerPosition1Image"
        app:srcCompat="@drawable/civil" />

    <ImageView
        android:id="@+id/playerPosition3Image"
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/select3Btn"
        app:layout_constraintStart_toEndOf="@+id/playerPosition2Image"
        app:srcCompat="@drawable/civil" />

    <ImageView
        android:id="@+id/playerPosition4Image"
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/select4Btn"
        app:layout_constraintStart_toEndOf="@+id/playerPosition3Image"
        app:srcCompat="@drawable/civil" />

    <ImageView
        android:id="@+id/playerPosition5Image"
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/select5Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerPosition4Image"
        app:srcCompat="@drawable/civil" />

    <ImageView
        android:id="@+id/playerBattleCardImage"
        android:layout_width="102dp"
        android:layout_height="146dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/playerPosition3Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/cpuBattleCardImage"
        android:layout_width="102dp"
        android:layout_height="146dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/playerBattleCardImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cpuWinCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/cpuWinCount_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/cpuBattleCardImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerWinCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/playerWinCount_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/playerPosition5Image"
        app:layout_constraintStart_toEndOf="@+id/playerBattleCardImage" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/next_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/round_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cpuBattleCardImage"
        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>